<resources>
    <string name="app_name">MultilanguageForm2</string>
    <string-array name="DaftarNegara">
        <item>Indonesia</item>
        <item>Singapura</item>
        <item>Malaysia</item>
        <item>Filipina</item>
        <item>Austtralia</item>
    </string-array>
    <string name="Lokasi">Location</string>
    <string name="Jalan">Street</string>
    <string name="KodePos">Zip Code</string>
    <string name="Negara">Country</string>
    <string name="Pemakai">User</string>
    <string name="Nama">Name</string>
    <string name="Telp">Telephone</string>
    <string name="Sandi">Password</string>
    <string name="tglLahir">Birth Date</string>
    <string name="Ulang">Reset</string>
    <string name="Simpan">Save</string>
</resources>